--- a/results.qmd
+++ b/results.qmd
@@ -140,4 +140,95 @@ weather_design_df |>
   count(year, sort = TRUE)
 ```
 
+```{r}
+df <- rec |> 
+  prep() |> 
+  pluck("template")
+
+df |> 
+  ungroup() |> 
+  select(- year) |> 
+  slice(1) |> 
+  pivot_longer(everything()) |> 
+  mutate(
+    day = str_extract(name, "\\d{1,2}-\\d{1,2}"),
+    day = str_c("2023-", day),
+    day = lubridate::ymd(day),
+    variable = str_remove(name, "_\\d{1,2}-\\d{1,2}"),
+    selected = TRUE
+  ) |> 
+  filter(variable != "yield") |> 
+  (\(x) {
+    crossing(
+      variable = x$variable,
+      day = seq.Date(from = as.Date("2023-01-01"), to = as.Date("2023-12-31"), by = "days")
+    ) |> 
+      left_join(x)
+  }) () |> 
+  mutate(selected = ifelse(!is.na(selected), selected, FALSE)) |> 
+  ggplot() + 
+  aes(day, variable, fill = selected) + 
+  geom_tile() + 
+  scale_x_date(date_labels = "%b", date_breaks = "month", expand = c(0, 0)) + 
+  scale_fill_manual(values = c("grey", "red3"))
+```
+
+```{r}
+tuning_rs_l <- list.files("tuning", full.names = TRUE) |> 
+  setdiff("tuning/linear_reg_lm.rds") |> 
+  map(read_rds) |> 
+  map(2) |> 
+  map2(c("xgboost", "lasso", "randomforest", "svm"), ~ mutate(.x, model = .y))
+
+tuning_rs_l |> 
+  crossing(
+    metric = c("rsq", "rmse", "msd", "mape")
+  ) |> 
+  mutate(
+    best = map2(tuning_rs_l, metric, ~ show_best(.x, metric = .y, n = 1)),
+    rs = map2(tuning_rs_l, best, \(x, y) {
+      best_l <- y |> 
+        select(- .metric, - mean, - std_err, - .estimator, - n, - .config, - model) |> 
+        imap_chr(~ paste0(.y, " = ", ifelse(is.na(round(as.numeric(.x), 3)), .x, round(as.numeric(.x), 3)))) |> 
+        str_flatten(", ")
+      
+      x |> 
+        select(id, .metrics) |> 
+        unnest(.metrics) |> 
+        inner_join(
+          y |> 
+            select(- any_of(c(".estimator", "n", ".config")))
+        ) |> 
+        select(id, .estimate, mean, std_err) |> 
+        mutate(best_l, model = x$model[1])
+    })
+  ) |> 
+  select(metric, rs) |> 
+  unnest(rs) |> 
+  group_by(metric) |> 
+  mutate(label_y = max(.estimate)) |> 
+  group_by(metric, model) |> 
+  mutate(label_y = c(label_y[1], rep(NA, n() - 1))) |> 
+  ggplot() + 
+  facet_grid(metric ~ model, scales = "free_y") + 
+  geom_line(aes(as.numeric(id), .estimate)) +
+  geom_point(aes(as.numeric(id), .estimate)) + 
+  geom_line(aes(as.numeric(id), mean), lty = 2) + 
+  geom_ribbon(
+    aes(as.numeric(id), ymin = mean - qnorm(.975) * std_err, ymax = mean + qnorm(.975) * std_err),
+    alpha = .3
+  ) + 
+  geom_text(
+    aes(x = 1960, y = label_y * 1.1, label = str_wrap(best_l, 50)),
+    color = "grey10",
+    size = 1.5,
+    hjust = 0,
+    vjust = 1
+  ) +
+  labs(
+    x = "Assessment year"
+  ) + 
+  scale_x_continuous(n.breaks = 4) +
+  theme_bw()
+```
 
